# http_client_experiment

./: Cargo.toml  README.md
src/: api.rs  api2.rs  api_model.rs  async_api.rs  async_http_api.rs  http.rs  http_api.rs  lib.rs  main.rs  mock_impl.rs  reqwest_impl.mod  reqwest_impl.rs  ureq_impl.rs
src/api/: async.rs  mod.rs  sync.rs
src/domain/: async_client.rs  mod.rs  room_get.rs  room_post.rs  sync_client.rs
src/http/: asyn.rs  async.rs  mod.rs  syn.rs  sync.rs
src/http_impl/: mock_impl.rs  mod.rs  reqwest_impl.rs  ureq_impl.rs
