[package]
name = "http_client_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
hyper = "0.14.23"
mdns = "3.0.0"
mdns-sd = "0.5.7"
reqwest = { version = "0.11.12", features = ["blocking", "default-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
serde_json = "1.0.85"
ureq = "2.5.0"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
